<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_mode_payment"
        android:textColor="#999999"
        android:textSize="12sp" />
    <RadioGroup
        android:id="@+id/mode_payment_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/select_mode_payment"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/bank_card_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_card"
            android:checked="true"
            android:textSize="14dp"
            android:textColor="#000000"/>
        <RadioButton
            android:id="@+id/alipay_scan_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alipay_scan"
            android:textSize="14dp"
            android:textColor="#000000"/>
        <RadioButton
            android:id="@+id/alipay_code_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alipay_code"
            android:textSize="14dp"
            android:visibility="gone"
            android:textColor="#000000"/>
        <RadioButton
            android:id="@+id/wechat_scan_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wechat_scan"
            android:textSize="14dp"
            android:textColor="#000000"/>
        <RadioButton
            android:id="@+id/wechat_code_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wechat_code"
            android:textSize="14dp"
            android:visibility="gone"
            android:textColor="#000000"/>
        <RadioButton
            android:id="@+id/optional_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_optional"
            android:textSize="14dp"
            android:visibility="gone"
            android:textColor="#000000"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_ori_reference_no"
        android:textColor="#999999"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/ori_reference_no_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:inputType="number"
        android:maxLength="12"
        android:hint="@string/input_ori_reference_no"
        android:textSize="14dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_ori_date"
        android:textColor="#999999"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/ori_date_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:inputType="number"
        android:maxLength="4"
        android:hint="@string/input_ori_date"
        android:textSize="14dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_money"
        android:textColor="#999999"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/input_money_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:inputType="number"
        android:maxLength="9"
        android:hint="@string/input_money"
        android:textSize="14dp"/>
    <Button
        android:id="@+id/ok_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"/>
</LinearLayout>